--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.tsx"></script>
+		<script
+			type="text/javascript"
+			src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=%VITE_NAVER_CLIENT_ID%"></script>
 	</body>
 </html>
