--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<script type="module" src="/src/main.tsx"></script>
 		<script
 			type="text/javascript"
-			src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=%VITE_NAVER_CLIENT_ID%"></script>
+			src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpKeyId=%VITE_NAVER_CLIENT_ID%&submodules=geocoder"></script>
 	</body>
 </html>
